--- a/public/children.html
+++ b/public/children.html
@@ -14,7 +14,7 @@
             </div>
             <div class="header-right">
                 <button id="theme-toggle-btn">☀️</button>
-                <a href="/" class="button-link">กลับหน้าแดชบอร์ด</a>
+                <a href="javascript:history.back()" class="button-link">กลับหน้าแดชบอร์ด</a>
             </div>
         </header>
 
@@ -26,7 +26,7 @@
                     <input type="text" id="child-name" required>
                 </div>
                 <div class="form-group">
-                    <label for="steam-id">Steam ID:</label>
+                    <label for="steam-id">Steam ID: <a href="guide.html#steam-id" class="help-link">(วิธีหา)</a></label>
                     <input type="text" id="steam-id" required>
                 </div>
                 <div class="form-group">
@@ -48,6 +48,7 @@
                             <th>Steam ID</th>
                             <th>เวลาที่กำหนด (ชม./2 สัปดาห์)</th>
                             <th>การกระทำ</th>
+                            <th>รายละเอียด</th>
                         </tr>
                     </thead>
                     <tbody>
